# toolchain-component-gettext

./: .gitmodules  .x-update-copyright  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  check-copyright-headers  configure
build-aux/: git-version-gen~
gettext-runtime/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gettext-runtime/doc/: Makefile.in
gettext-runtime/gnulib-lib/: Makefile.am  Makefile.in  exitfail.h  iconv_open-aix.h  iconv_open-hpux.h  iconv_open-irix.h  iconv_open-osf.h  iconv_open-solaris.h  iconv_open-zos.h
gettext-runtime/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-runtime/intl/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  plural.c  plural.h
gettext-runtime/intl-csharp/: Makefile.am  Makefile.in
gettext-runtime/intl-java/: Makefile.in
gettext-runtime/intl/gnulib-lib/: Makefile.am  Makefile.in
gettext-runtime/intl/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-runtime/libasprintf/: Makefile.am  Makefile.in  aclocal.m4  autosprintf.cc  config.h.in  configure  configure.ac
gettext-runtime/libasprintf/gnulib-lib/: Makefile.am  Makefile.in  alloca.in.h
gettext-runtime/libasprintf/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-runtime/m4/: Makefile.in
gettext-runtime/man/: Makefile.in  envsubst.1  gettext.1.in  ngettext.1.in
gettext-runtime/po/: ast.po  be.po  bg.po  ca.po  cs.gmo  cs.po  da.po  de.po  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.po  es.po  et.po  fi.po  fr.po  ga.po  gettext-runtime.pot  gl.po  hr.gmo  hr.po  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.gmo  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.gmo  ro.po  ru.po  sk.po  sl.po  (+8 more)
gettext-runtime/src/: Makefile.am  Makefile.in
gettext-runtime/tests/: Makefile.in
gettext-tools/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
gettext-tools/emacs/: Makefile.in
gettext-tools/examples/: Makefile.in  configure
gettext-tools/examples/po/: Makefile.in
gettext-tools/gnulib-lib/: Makefile.gnulib  Makefile.in  argmatch.h  getopt-core.h  gl_linkedhash_list.h  hash.c  hash.h  iconv_open-aix.h  iconv_open-hpux.h  iconv_open-irix.h  iconv_open-osf.h  iconv_open-solaris.h  iconv_open-zos.h  mem-hash-map.c
gettext-tools/gnulib-lib/libxml/: buf.c  buf.h  enc.h  parser.in.h  save.h  timsort.h  trionan.c
gettext-tools/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-tools/gnulib-tests/: Makefile.gnulib  Makefile.in
gettext-tools/intl/: Makefile.am  Makefile.in
gettext-tools/its/: Makefile.in
gettext-tools/libgettextpo/: Makefile.gnulib  Makefile.in  iconv_open-aix.h  iconv_open-hpux.h  iconv_open-irix.h  iconv_open-osf.h  iconv_open-solaris.h  iconv_open-zos.h  markup.c  markup.h  mem-hash-map.h  unistd.in.h
gettext-tools/libgettextpo/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-tools/libgrep/: Makefile.gnulib  Makefile.in  regex_internal.h
gettext-tools/libgrep/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
gettext-tools/m4/: Makefile.am  Makefile.in
gettext-tools/man/: Makefile.in
gettext-tools/misc/: Makefile.in
gettext-tools/po/: be.po  bg.gmo  bg.po  ca.gmo  ca.po  cs.po  da.gmo  da.po  de.gmo  de.po  el.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  gettext-tools.pot  gl.gmo  gl.po  id.gmo  id.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  nb.po  nl.gmo  nl.po  nn.gmo  nn.po  (+29 more)
gettext-tools/projects/: Makefile.in
gettext-tools/src/: Makefile.am  Makefile.in  cldr-plural.c  cldr-plural.h  po-gram-gen.c  po-gram-gen.h  po-gram-gen2.h
gettext-tools/styles/: Makefile.in
gettext-tools/system-tests/: Makefile.in
gettext-tools/tests/: Makefile.in  autopoint-3
gnulib-local/: Makefile.in
libtextstyle/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
libtextstyle/adhoc-tests/: Makefile.in
libtextstyle/build-aux/: test-driver
libtextstyle/gnulib-m4/: gnulib-cache.m4  gnulib-comp.m4
libtextstyle/lib/: Makefile.gnulib  Makefile.in  error.h  gl_array_list.h  libtextstyle.sym.in-t1  memory-ostream.c  obstack.h  term-ostream.c
libtextstyle/tests/: Makefile.gnulib  Makefile.in
